HTML first sample

--- a/index.html
+++ b/index.html
@@ -7,7 +7,28 @@
 </head>
 
 <body>
-    <div id="container"></div>
+    <div class="calculator">
+        <div class="display">123</div>
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <button class="operator">/</button>
+        <br>
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button class="operator">*</button>
+        <br>
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button class="operator">-</button>
+        <br>
+        <button>0</button>
+        <button class="operator">+</button>
+        <button class="equals">=</button>
+        <button class="clear">C</button>
+      </div>
     <script src="script.js"></script>
   </body>
 </html>
