--- a/index.html
+++ b/index.html
@@ -8,27 +8,26 @@
 
 <body>
     <div class="calculator">
-        <div class="display">123</div>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
+        <div class="display">0</div>
+        <button class="number">7</button>
+        <button class="number">8</button>
+        <button class="number">9</button>
         <button class="operator">/</button>
         <br>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
+        <button class="number">4</button>
+        <button class="number">5</button>
+        <button class="number">6</button>
         <button class="operator">*</button>
         <br>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
+        <button class="number">1</button>
+        <button class="number">2</button>
+        <button class="number">3</button>
         <button class="operator">-</button>
         <br>
-        <button>0</button>
+        <button class="number">0</button>
         <button class="operator">+</button>
         <button class="equals">=</button>
         <button class="clear">C</button>
-      </div>
     <script src="script.js"></script>
   </body>
 </html>
